# Kova

./: .gitignore  AI_OPTIMIZE_PLAN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  quick.html  vite.config.ts
src/: App.tsx  index.css  main.tsx  quick.css  quick.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/services/: ai.rs  db.rs  mod.rs  models.rs
src-tauri/src/services/db/: config.rs  conversations.rs  folders.rs  io.rs  mod.rs  notes.rs
src/components/: StatusBar.tsx
src/components/detail/: NoteDetail.tsx
src/components/dialog/: ConfirmDialog.tsx  ContextMenu.tsx  FolderPicker.tsx  NoteProperties.tsx
src/components/layout/: AIChatPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/layout/AIChatPanel/: ConversationList.tsx  DeleteConfirmDialog.tsx  MessageBubble.tsx  ProfileManager.tsx  ThinkingBlock.tsx  index.tsx  types.ts  utils.ts
src/components/layout/SettingsPanel/: index.tsx  ui-rows.tsx
src/components/layout/Sidebar/: FolderInfoDialog.tsx  FolderItem.tsx  index.tsx  types.ts  utils.ts
src/components/shared/: CodeEditor.tsx  FormatToolbar.tsx  MarkdownPreview.tsx  NoteList.tsx  SearchBar.tsx  SlidingButtonGroup.tsx
src/hooks/: useDraggable.ts  useNotes.ts  usePanelResize.ts
src/lib/: dateParser.ts  db.ts  theme.ts  windowState.ts  zoom.ts
