[package]
name = "kova"
version = "0.1.0"
description = "Kova - A lightweight quick note tool"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"

[dependencies.windows]
version = "0.58"
features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"]
